Added dynamic translation parsing, updating and rendering (catmul rom curves on translation element).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,10 +6,11 @@ PROJECT(trabalhocg25)
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 
 include_directories(${CMAKE_SOURCE_DIR}/include)
+include_directories(${CMAKE_SOURCE_DIR}/include/transforms)
 include_directories(${CMAKE_SOURCE_DIR}/generator/include)
 
 # Add source files
-set(SOURCES src/main.cpp src/tinyxml2.cpp src/config.cpp src/group.cpp src/camera.cpp src/matrix4x4.cpp src/vector3.cpp src/vector4.cpp src/frustum.cpp)
+set(SOURCES src/main.cpp src/tinyxml2.cpp src/config.cpp src/group.cpp src/camera.cpp src/matrix4x4.cpp src/vector3.cpp src/vector4.cpp src/frustum.cpp src/transforms/rotation_dynamic.cpp src/transforms/rotation_static.cpp src/transforms/translation_dynamic.cpp src/transforms/translation_static.cpp)
 
 # Create the executable
 add_executable(${PROJECT_NAME} ${SOURCES})
