--- a/src/engine/CmakeLists.txt
+++ b/src/engine/CmakeLists.txt
@@ -12,5 +12,6 @@ if (WIN32)
     target_include_directories(engine PRIVATE
         ${CMAKE_SOURCE_DIR}/toolkits/glut
         ${CMAKE_SOURCE_DIR}/toolkits/glew
+        ${CMAKE_SOURCE_DIR}/toolkits/devil
     )
 endif()
